--- a/style.css
+++ b/style.css
@@ -17,11 +17,22 @@ body{
     margin: 0.3% 0%;
     text-align: center;
 }
+@media(max-width: 768px) {
+    .hea {
+       font-size: 12px;
+    }
+}
 .contain{
     background-color: #1e365a;
     padding: 1px;
     padding-left: 25%;
 
+}
+@media(max-width: 768px) {
+    .contain {
+        padding: 1px;
+        padding-left: 10%;
+    }
 }
 .break{
     padding: 0.3% 0.5%;
@@ -34,10 +45,24 @@ body{
     margin-bottom: 1%;
     border: 1px  white solid;
 }
+@media(max-width: 768px) {
+    .break {
+        font-size: 22px;
+        width: 65%;
+        margin-top: 3%;
+        margin-bottom: 3%;
+    }
+}
 .head{
     font-size: 45px;
     font-weight: 700;
     line-height: 1.2;
+}
+@media(max-width: 768px) {
+    .head  {
+        font-size: 25px;
+
+    }
 }
 .head2{
     line-height: 38px;
@@ -46,11 +71,22 @@ body{
     font-style: normal;
     padding-bottom: 1%;
 }
+@media(max-width: 768px) {
+    .head2  {
+        font-size: 20px;
+
+    }
+}
 hr{
     width: 85%;
 }
 .update{
     font-size: 13px;
+}
+@media(max-width: 768px) {
+     img {
+        width: 90%;
+    }
 }
 img{
     margin-bottom: 4%;
@@ -58,6 +94,12 @@ img{
 .contain2{
     padding: 1px;
     padding-left: 25%;
+}
+@media(max-width: 768px) {
+    .contain2 {
+        padding: 1px;
+        padding-left: 10%;
+    }
 }
 .box{
     background: rgba(255,255,255,1);
@@ -68,17 +110,37 @@ img{
     margin-top: 4%;
     
 }
+@media(max-width: 768px) {
+    .box {
+        padding: 5px;
+        width: 95%;
+
+   }
+}
+
+
 .text1{
     line-height: 45px;
     font-weight: 400;
     font-size: 35px;
     color: rgb(0, 0, 0);
 }
+@media(max-width: 768px) {
+    .text1 {
+        font-size: 25px;
+        line-height: 35px;
+    }
+}
 .text2{
     line-height: 45px;
     font-weight: 400;
     font-size: 35px;
     color: rgb(197, 17, 25);
+}
+@media(max-width: 768px) {
+    .text2 {
+        font-size: 22px;
+    }
 }
 .innerbox{
     border-style: solid;
@@ -90,6 +152,28 @@ img{
     display: flex;
     justify-content: space-around;
 }
+@media(max-width: 768px) {
+    .innerbox {
+       display: block;
+       padding-left: 20px;
+
+    }
+}
+@media(max-width: 768px) {
+    .innerbox li {
+        font-size: 18px;
+        line-height: 40px;
+
+    }
+}
+@media(max-width: 768px) {
+    .innerbox img {
+        width: 145px;
+        height: 145px;
+        margin-left: 20%;
+
+    }
+}
 ul li {
     font-weight: 700;
     font-size: 32px;
@@ -98,17 +182,18 @@ ul li {
 }
 .btn{
     display: flex;
-    justify-content: space-around;
+    flex-wrap: wrap;
+    justify-content: space-between;
     padding: 1px;
-    width: 70%;
+    width: 60%;
     margin-top: 2%;
     margin-bottom: 2%;
-    margin-left: 22%;
+    margin-left: 25%;
 }
 .age-btn{
     border:2px  black solid;
     border-radius: 10px;
-    width: 20%;
+    width: 30%;
     color: #fff;
     font-size: 25px;
     line-height: 30px;
@@ -116,8 +201,28 @@ ul li {
     padding: 15px;
     text-decoration: none;
     background: linear-gradient(#1e88e5, #38a2ff);
+    margin-top: 2%;
+    margin-bottom: 2%;
 
-}
+} 
+  
+  @media only screen and (max-width: 600px) {
+    .btn {
+      flex-wrap: wrap;
+      justify-content: space-between;
+      margin-left: 10%; /* Reset margin left */
+      width: 85%;
+      
+
+    }
+    .age-btn {
+      width: 45%; 
+      margin: 5px; 
+      font-size: 21px;
+    }
+  }
+  
+
 .age-btn:hover {
     background: linear-gradient(#38a2ff, #1e88e5);
 }
@@ -138,6 +243,13 @@ ul li {
 .age-bt:hover{
     text-decoration: underline;
 }
+@media only screen and (max-width: 600px) {
+
+    .age-bt {
+      width: 100%; 
+      font-size: 21px;
+    }
+  }
 .footer{
     text-align: center;
     background-color: #2e3138;
